--- a/css/home.css
+++ b/css/home.css
@@ -37,7 +37,7 @@
     font-weight: 700;
 }
 .sec1{
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(../images/images/homeimg.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(/sbsc-exam-portal/images/homeimg.jpg);
     background-position: center;
     background-size: cover;
     /* background-image:linear-gradient(-45deg, #04925E, #082E7E);   */
